[gd_scene load_steps=2 format=3 uid="uid://ddfy761lxmb02"]

[ext_resource type="Script" uid="uid://b66uuq3fwqyak" path="res://scripts/websocket_panel.gd" id="1_7wb73"]

[node name="WebSocketPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7wb73")
value = 48763

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "WebSocket"
autowrap_mode = 3

[node name="Status" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Status: No Socket"
autowrap_mode = 3

[node name="ColorRect" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0.741385, 0.741385, 0.741385, 1)

[node name="Log" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnnouncementEdit" type="TextEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Announcement..."

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Announce"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Clear Output"

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_announce"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_clear_output"]
